--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 <p align="center" style="font-style: oblique;"><b>Time To Pick Up  Prediction Service</b></p>
-<img src="images/red-car.png"/>
+<img src="images/green-car.png"/>
 </body>
 </html>
 
