--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -2,18 +2,17 @@
 <html lang="en">
 <head>
     <style>
-            img {
+    img {
     position: absolute;
     margin: auto;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-}
-        }
+    }
     </style>
     <meta charset="UTF-8">
-    <title>Time To Pick Up  Prediction Service</title>
+    <title>Time Till Pick Up  Prediction Service</title>
 </head>
 <body>
 <p align="center" style="font-style: oblique;"><b>Time To Pick Up  Prediction Service</b></p>
