Adding Deep Learning for > VC Funding!

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -15,7 +15,7 @@
     <title>Time Till Pick Up  Prediction Service</title>
 </head>
 <body>
-<p align="center" style="font-style: oblique;"><b>Time To Pick Up  Prediction Service</b></p>
+<p align="center" style="font-style: oblique;"><b>Time Till Pick Up  Prediction Service</b></p>
 <img src="images/green-car.png"/>
 </body>
 </html>
