Fixing spike in prediction time

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <p align="center" style="font-style: oblique;"><b>Time Till Pick Up  Prediction Service!</b></p>
-<img src="images/blue-car.png"/>
+<img src="images/green-car.png"/>
 </body>
 </html>
 
